@@ -3,9 +3,12 @@ package com.mebeamformer.blockentity;
 import appeng.api.networking.GridFlags;
 import appeng.api.networking.GridHelper;
 import appeng.api.networking.IGridConnection;
+import appeng.api.networking.IGridNode;
 import appeng.api.networking.IManagedGridNode;
 import appeng.api.util.AECableType;
 import appeng.blockentity.grid.AENetworkBlockEntity;
+import com.mebeamformer.ME_Beam_Former;
+import com.mebeamformer.block.OmniBeamFormerBlock;
 import net.minecraft.core.BlockPos;
 import net.minecraft.core.Direction;
 import net.minecraft.nbt.CompoundTag;
@@ -17,151 +20,127 @@ import net.minecraft.world.level.block.state.BlockState;
 import net.minecraft.world.phys.AABB;
 import net.minecraftforge.api.distmarker.Dist;
 import net.minecraftforge.api.distmarker.OnlyIn;
+import org.jetbrains.annotations.Nullable;
 
-import java.util.*;
-
-import com.mebeamformer.ME_Beam_Former;
-import com.mebeamformer.block.OmniBeamFormerBlock;
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.Comparator;
+import java.util.EnumSet;
+import java.util.HashMap;
+import java.util.HashSet;
+import java.util.List;
+import java.util.Map;
+import java.util.Set;
 
 public class OmniBeamFormerBlockEntity extends AENetworkBlockEntity implements ILinkable {
-    // 持久化：绑定目标集合
+    private static final Comparator<BlockPos> TARGET_ORDER = Comparator.comparingLong(BlockPos::asLong);
+
     private final Set<BlockPos> links = new HashSet<>();
-    // 运行时：每个目标的 AE 连接
     private final Map<BlockPos, IGridConnection> connections = new HashMap<>();
-    // 客户端渲染缓存：当前"在线&供电"的目标列表（服务端同步）
-    private List<BlockPos> clientActiveTargets = Collections.emptyList();
-    // 上一次服务端可见集合，用于决定是否 markForUpdate()
-    private final Set<BlockPos> lastActiveSet = new HashSet<>();
-    // 缓存当前暴露的背面方向，避免每 tick 重复设置
-    private Direction lastExposedBack = null;
+    private List<BlockPos> activeTargets = List.of();
+    private List<BlockPos> clientActiveTargets = List.of();
+    @Nullable
+    private Direction lastExposedBack;
 
     public OmniBeamFormerBlockEntity(BlockPos pos, BlockState state) {
         super(ME_Beam_Former.OMNI_BEAM_FORMER_BE.get(), pos, state);
-        this.getMainNode().setFlags(GridFlags.DENSE_CAPACITY);
+        getMainNode().setFlags(GridFlags.DENSE_CAPACITY);
     }
 
-    // 仅背面允许连接致密/智能线缆（与普通成型器一致）
     @Override
     public AECableType getCableConnectionType(Direction dir) {
-        Direction facing = this.getBlockState().getValue(OmniBeamFormerBlock.FACING);
+        Direction facing = getBlockState().getValue(OmniBeamFormerBlock.FACING);
         return dir == facing.getOpposite() ? AECableType.SMART : AECableType.NONE;
     }
 
     @Override
     public Set<Direction> getGridConnectableSides(appeng.api.orientation.BlockOrientation orientation) {
-        Direction facing = this.getBlockState().getValue(OmniBeamFormerBlock.FACING);
+        Direction facing = getBlockState().getValue(OmniBeamFormerBlock.FACING);
         return EnumSet.of(facing.getOpposite());
     }
 
     public static void serverTick(Level level, BlockPos pos, BlockState state, OmniBeamFormerBlockEntity be) {
-        if (be.isRemoved()) return;
-
-        // 强制仅暴露背面为可连接面
-        Direction facing = state.getValue(OmniBeamFormerBlock.FACING);
-        Direction back = facing.getOpposite();
-        if (be.lastExposedBack != back) {
-            var managed = be.getMainNode();
-            if (managed != null) {
-                managed.setExposedOnSides(EnumSet.of(back));
-            }
-            be.lastExposedBack = back;
-        }
-
-        IManagedGridNode myManaged = be.getMainNode();
-        var myNode = myManaged != null ? myManaged.getNode() : null;
-        if (myNode == null) {
-            // 等待节点准备好
-            if (!be.lastActiveSet.isEmpty()) {
-                be.lastActiveSet.clear();
-                be.markForUpdate();
-            }
+        if (be.isRemoved()) {
             return;
         }
 
-        // 维护与所有链接目标的连接
-        Set<BlockPos> activeNow = new HashSet<>();
-        for (BlockPos targetPos : new HashSet<>(be.links)) {
-            var tBe = level.getBlockEntity(targetPos);
-            if (!(tBe instanceof OmniBeamFormerBlockEntity other)) {
-                // 目标不存在，移除绑定
+        Direction facing = state.getValue(OmniBeamFormerBlock.FACING);
+        be.syncExposedBack(facing.getOpposite());
+
+        IManagedGridNode myManaged = be.getMainNode();
+        IGridNode myNode = myManaged.getNode();
+        if (myNode == null) {
+            be.clearRuntimeState();
+            be.updateOwnStatus(OmniBeamFormerBlock.Status.ON);
+            return;
+        }
+
+        List<BlockPos> activeNow = new ArrayList<>();
+        for (BlockPos targetPos : be.getSortedLinks()) {
+            if (!level.hasChunkAt(targetPos)) {
+                be.releaseConnection(targetPos, myNode, true);
+                continue;
+            }
+
+            BlockState targetState = level.getBlockState(targetPos);
+            if (!(targetState.getBlock() instanceof OmniBeamFormerBlock)) {
                 be.removeLink(targetPos);
                 continue;
             }
-            IManagedGridNode otherManaged = other.getMainNode();
-            var otherNode = otherManaged != null ? otherManaged.getNode() : null;
-            if (otherNode == null) {
-                // 对端未就绪，跳过
+
+            var targetEntity = level.getBlockEntity(targetPos);
+            if (!(targetEntity instanceof OmniBeamFormerBlockEntity other) || other == be || other.isRemoved()) {
+                be.releaseConnection(targetPos, myNode, true);
                 continue;
             }
 
-            // 确保单一连接存在
-            IGridConnection conn = be.connections.get(targetPos);
-            if (conn == null || conn.getOtherSide(myNode) != otherNode) {
-                // 查找现有连接
-                IGridConnection existing = myNode.getConnections().stream()
-                        .filter(c -> c.getOtherSide(myNode) == otherNode)
-                        .findFirst().orElse(null);
-                if (existing == null) {
-                    try {
-                        existing = GridHelper.createConnection(myNode, otherNode);
-                    } catch (IllegalStateException ignored) {
-                        existing = myNode.getConnections().stream()
-                                .filter(c -> c.getOtherSide(myNode) == otherNode)
-                                .findFirst().orElse(null);
-                    }
-                }
-                if (existing != null) {
-                    be.connections.put(targetPos, existing);
-                    // 对端也缓存此连接（便于清理）
-                    other.connections.put(pos, existing);
-                }
+            IManagedGridNode otherManaged = other.getMainNode();
+            IGridNode otherNode = otherManaged.getNode();
+            if (otherNode == null) {
+                be.releaseConnection(targetPos, myNode, true);
+                continue;
             }
 
-            // 是否“在线&供电”以供渲染
-            boolean aOk = myManaged.isOnline() && myManaged.isPowered();
-            boolean bOk = otherManaged.isOnline() && otherManaged.isPowered();
-            if (aOk && bOk) {
+            if (be.ensureConnection(targetPos, myNode, otherNode) != null
+                    && myManaged.isOnline() && myManaged.isPowered()
+                    && otherManaged.isOnline() && otherManaged.isPowered()) {
                 activeNow.add(targetPos);
             }
         }
 
-        // 若可见集合变化，触发客户端同步
-        if (!be.lastActiveSet.equals(activeNow)) {
-            be.lastActiveSet.clear();
-            be.lastActiveSet.addAll(activeNow);
-            be.markForUpdate();
-        }
-
-        // 更新方块状态显示：有任何活跃连接则显示 BEAMING，否则 ON
-        var curState = level.getBlockState(pos);
-        OmniBeamFormerBlock.Status targetStatus = activeNow.isEmpty() ? OmniBeamFormerBlock.Status.ON : OmniBeamFormerBlock.Status.BEAMING;
-        if (curState.getBlock() instanceof OmniBeamFormerBlock && curState.getValue(OmniBeamFormerBlock.STATUS) != targetStatus) {
-            level.setBlock(pos, curState.setValue(OmniBeamFormerBlock.STATUS, targetStatus), 3);
-        }
+        be.syncActiveTargets(activeNow);
+        be.updateOwnStatus(activeNow.isEmpty() ? OmniBeamFormerBlock.Status.ON : OmniBeamFormerBlock.Status.BEAMING);
     }
 
     public static void clientTick(Level level, BlockPos pos, BlockState state, OmniBeamFormerBlockEntity be) {
-        // 客户端仅渲染，数据由 readFromStream 获取
     }
 
+    @Override
     public void addLink(BlockPos other) {
-        if (other.equals(this.getBlockPos())) return;
-        if (this.links.add(other)) {
-            this.setChanged();
+        if (other.equals(getBlockPos())) {
+            return;
+        }
+
+        if (links.add(other)) {
+            setChanged();
         }
     }
 
+    @Override
     public void removeLink(BlockPos other) {
-        if (this.links.remove(other)) {
-            IGridConnection c = this.connections.remove(other);
-            if (c != null) {
-                try { c.destroy(); } catch (Throwable ignored) {}
-            }
-            this.setChanged();
+        if (!links.remove(other)) {
+            return;
         }
+
+        releaseConnection(other, getMainNode().getNode(), true);
+        removeActiveTarget(other);
+        setChanged();
     }
 
-    public Set<BlockPos> getLinks() { return Collections.unmodifiableSet(links); }
+    @Override
+    public Set<BlockPos> getLinks() {
+        return Collections.unmodifiableSet(links);
+    }
 
     public List<BlockPos> getClientActiveTargets() {
         return clientActiveTargets;
@@ -169,52 +148,50 @@ public class OmniBeamFormerBlockEntity extends AENetworkBlockEntity implements I
 
     @Override
     protected void writeToStream(FriendlyByteBuf data) {
-        // 同步当前活跃目标集合
-        data.writeVarInt(this.lastActiveSet.size());
-        for (BlockPos p : this.lastActiveSet) {
-            data.writeBlockPos(p);
+        super.writeToStream(data);
+        data.writeVarInt(activeTargets.size());
+        for (BlockPos pos : activeTargets) {
+            data.writeBlockPos(pos);
         }
     }
 
     @Override
     protected boolean readFromStream(FriendlyByteBuf data) {
-        int n = data.readVarInt();
-        List<BlockPos> list = new ArrayList<>(n);
-        for (int i = 0; i < n; i++) list.add(data.readBlockPos());
-        boolean changed = !list.equals(this.clientActiveTargets);
-        this.clientActiveTargets = list;
-        return changed;
+        boolean changed = super.readFromStream(data);
+        int count = data.readVarInt();
+        List<BlockPos> updatedTargets = new ArrayList<>(count);
+        for (int i = 0; i < count; i++) {
+            updatedTargets.add(data.readBlockPos());
+        }
+
+        List<BlockPos> immutableTargets = updatedTargets.isEmpty() ? List.of() : List.copyOf(updatedTargets);
+        boolean targetsChanged = !immutableTargets.equals(clientActiveTargets);
+        clientActiveTargets = immutableTargets;
+        return changed || targetsChanged;
     }
 
     @Override
     public void onChunkUnloaded() {
-        this.disconnectAll();
+        disconnectAll();
         super.onChunkUnloaded();
     }
 
     @Override
     public void setRemoved() {
+        disconnectAll();
         super.setRemoved();
-        this.disconnectAll();
-    }
-
-    private void disconnectAll() {
-        for (IGridConnection c : this.connections.values()) {
-            try { c.destroy(); } catch (Throwable ignored) {}
-        }
-        this.connections.clear();
     }
 
     @Override
     public void saveAdditional(CompoundTag tag) {
         super.saveAdditional(tag);
         ListTag list = new ListTag();
-        for (BlockPos p : this.links) {
-            CompoundTag t = new CompoundTag();
-            t.putInt("x", p.getX());
-            t.putInt("y", p.getY());
-            t.putInt("z", p.getZ());
-            list.add(t);
+        for (BlockPos pos : links) {
+            CompoundTag targetTag = new CompoundTag();
+            targetTag.putInt("x", pos.getX());
+            targetTag.putInt("y", pos.getY());
+            targetTag.putInt("z", pos.getZ());
+            list.add(targetTag);
         }
         tag.put("links", list);
     }
@@ -222,35 +199,35 @@ public class OmniBeamFormerBlockEntity extends AENetworkBlockEntity implements I
     @Override
     public void loadTag(CompoundTag tag) {
         super.loadTag(tag);
-        // 读取持久化的链接数据 - 修复重新进入游戏后连接断开的问题
-        this.links.clear();
+        links.clear();
+        connections.clear();
+        activeTargets = List.of();
+        clientActiveTargets = List.of();
+        lastExposedBack = null;
+
         if (tag.contains("links", Tag.TAG_LIST)) {
             ListTag list = tag.getList("links", Tag.TAG_COMPOUND);
             for (int i = 0; i < list.size(); i++) {
-                CompoundTag t = list.getCompound(i);
-                BlockPos pos = new BlockPos(t.getInt("x"), t.getInt("y"), t.getInt("z"));
-                this.links.add(pos);
+                CompoundTag targetTag = list.getCompound(i);
+                links.add(new BlockPos(
+                        targetTag.getInt("x"),
+                        targetTag.getInt("y"),
+                        targetTag.getInt("z")));
             }
         }
     }
 
-    /**
-     * 重写渲染边界框以防止视锥体剔除导致的光束消失问题
-     */
     @OnlyIn(Dist.CLIENT)
     @Override
     public AABB getRenderBoundingBox() {
-        // 如果没有目标，使用较大的默认边界框
-        if (clientActiveTargets == null || clientActiveTargets.isEmpty()) {
+        if (clientActiveTargets.isEmpty()) {
             BlockPos pos = getBlockPos();
-            return new AABB(pos.getX() - 5, pos.getY() - 5, pos.getZ() - 5, 
-                           pos.getX() + 6, pos.getY() + 6, pos.getZ() + 6);
+            return new AABB(
+                    pos.getX() - 5, pos.getY() - 5, pos.getZ() - 5,
+                    pos.getX() + 6, pos.getY() + 6, pos.getZ() + 6);
         }
 
         BlockPos pos = getBlockPos();
-        // 计算包含所有目标的边界框
-        // 关键：渲染边界框必须覆盖所有光束，这样即使玩家只能看到光束中间部分，
-        // 至少有一个端点的BlockEntity会被触发渲染
         double minX = pos.getX();
         double minY = pos.getY();
         double minZ = pos.getZ();
@@ -267,10 +244,178 @@ public class OmniBeamFormerBlockEntity extends AENetworkBlockEntity implements I
             maxZ = Math.max(maxZ, target.getZ() + 1);
         }
 
-        // 适度扩展以处理光束的粗细和视角边缘情况
-        // 不需要过大，因为边界框已经覆盖了所有光束
         double expansion = 2.0;
-        return new AABB(minX - expansion, minY - expansion, minZ - expansion, 
-                       maxX + expansion, maxY + expansion, maxZ + expansion);
+        return new AABB(
+                minX - expansion, minY - expansion, minZ - expansion,
+                maxX + expansion, maxY + expansion, maxZ + expansion);
+    }
+
+    private void disconnectAll() {
+        IGridNode myNode = getMainNode().getNode();
+        if (myNode != null) {
+            for (IGridConnection connection : new HashSet<>(connections.values())) {
+                if (isLiveConnection(connection, myNode, null)) {
+                    destroyConnection(connection);
+                }
+            }
+        }
+
+        clearRuntimeState();
+    }
+
+    private void clearRuntimeState() {
+        connections.clear();
+        syncActiveTargets(List.of());
+    }
+
+    @Nullable
+    private IGridConnection ensureConnection(BlockPos targetPos, IGridNode myNode, IGridNode otherNode) {
+        IGridConnection cachedConnection = connections.get(targetPos);
+        if (isLiveConnection(cachedConnection, myNode, otherNode)) {
+            return cachedConnection;
+        }
+
+        if (isLiveConnection(cachedConnection, myNode, null)) {
+            destroyConnection(cachedConnection);
+        }
+        connections.remove(targetPos);
+
+        IGridConnection liveConnection = findLiveConnection(myNode, otherNode);
+        if (liveConnection == null) {
+            try {
+                liveConnection = GridHelper.createConnection(myNode, otherNode);
+            } catch (IllegalStateException ignored) {
+                liveConnection = findLiveConnection(myNode, otherNode);
+            }
+        }
+
+        if (liveConnection != null) {
+            connections.put(targetPos, liveConnection);
+        }
+        return liveConnection;
+    }
+
+    private void releaseConnection(BlockPos targetPos, @Nullable IGridNode myNode, boolean destroyLiveConnection) {
+        IGridConnection cachedConnection = connections.remove(targetPos);
+        if (!destroyLiveConnection || myNode == null) {
+            return;
+        }
+
+        if (isLiveConnection(cachedConnection, myNode, null)) {
+            destroyConnection(cachedConnection);
+            return;
+        }
+
+        IGridNode targetNode = getTargetNode(targetPos);
+        if (targetNode == null) {
+            return;
+        }
+
+        IGridConnection liveConnection = findLiveConnection(myNode, targetNode);
+        if (liveConnection != null) {
+            destroyConnection(liveConnection);
+        }
+    }
+
+    @Nullable
+    private IGridNode getTargetNode(BlockPos targetPos) {
+        if (level == null || !level.hasChunkAt(targetPos)) {
+            return null;
+        }
+
+        var targetEntity = level.getBlockEntity(targetPos);
+        if (targetEntity instanceof OmniBeamFormerBlockEntity other && !other.isRemoved()) {
+            return other.getMainNode().getNode();
+        }
+
+        return null;
+    }
+
+    private void syncActiveTargets(List<BlockPos> activeNow) {
+        List<BlockPos> immutableTargets = activeNow.isEmpty() ? List.of() : List.copyOf(activeNow);
+        if (!immutableTargets.equals(activeTargets)) {
+            activeTargets = immutableTargets;
+            markForUpdate();
+        }
+    }
+
+    private void removeActiveTarget(BlockPos targetPos) {
+        if (!activeTargets.contains(targetPos)) {
+            return;
+        }
+
+        List<BlockPos> updatedTargets = new ArrayList<>(activeTargets);
+        updatedTargets.remove(targetPos);
+        syncActiveTargets(updatedTargets);
+        updateOwnStatus(updatedTargets.isEmpty()
+                ? OmniBeamFormerBlock.Status.ON
+                : OmniBeamFormerBlock.Status.BEAMING);
+    }
+
+    private void syncExposedBack(Direction back) {
+        if (lastExposedBack != back) {
+            getMainNode().setExposedOnSides(EnumSet.of(back));
+            lastExposedBack = back;
+        }
+    }
+
+    private void updateOwnStatus(OmniBeamFormerBlock.Status status) {
+        if (level == null || isRemoved()) {
+            return;
+        }
+
+        BlockState currentState = getBlockState();
+        if (currentState.getBlock() instanceof OmniBeamFormerBlock
+                && currentState.getValue(OmniBeamFormerBlock.STATUS) != status) {
+            level.setBlock(getBlockPos(), currentState.setValue(OmniBeamFormerBlock.STATUS, status), 3);
+        }
+    }
+
+    private List<BlockPos> getSortedLinks() {
+        List<BlockPos> sortedLinks = new ArrayList<>(links);
+        sortedLinks.sort(TARGET_ORDER);
+        return sortedLinks;
+    }
+
+    @Nullable
+    private IGridConnection findLiveConnection(IGridNode myNode, IGridNode otherNode) {
+        for (IGridConnection connection : myNode.getConnections()) {
+            if (getOtherSide(connection, myNode) == otherNode) {
+                return connection;
+            }
+        }
+        return null;
+    }
+
+    private boolean isLiveConnection(
+            @Nullable IGridConnection connection,
+            IGridNode myNode,
+            @Nullable IGridNode expectedOtherNode) {
+        if (connection == null || !myNode.getConnections().contains(connection)) {
+            return false;
+        }
+
+        IGridNode actualOtherNode = getOtherSide(connection, myNode);
+        if (actualOtherNode == null) {
+            return false;
+        }
+
+        return expectedOtherNode == null || actualOtherNode == expectedOtherNode;
+    }
+
+    @Nullable
+    private IGridNode getOtherSide(IGridConnection connection, IGridNode myNode) {
+        try {
+            return connection.getOtherSide(myNode);
+        } catch (IllegalArgumentException | IllegalStateException ignored) {
+            return null;
+        }
+    }
+
+    private void destroyConnection(IGridConnection connection) {
+        try {
+            connection.destroy();
+        } catch (IllegalArgumentException | IllegalStateException ignored) {
+        }
     }
 }
